# vino

./: .cursorrules  .dockerignore  .env.docker.example  .env.example  .env.railway.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_SPEC.md  README.md  docker-compose.yml  manage.py  pyproject.toml  railway.json  seed_data.json  setup_prompts.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  mobile-ci.yml
apps/api/: ai_utils.py  views.py
apps/core/: context_processors.py  feature_views.py  middleware.py  models.py  utils.py  views.py
apps/lookup/: admin.py  forms.py  models.py
apps/notifications/: admin.py  fcm.py  models.py  signals.py  tasks.py  views.py
apps/palate/: admin.py  models.py  urls.py  views.py
apps/partners/: admin.py  apps.py  forms.py  models.py  subscription_views.py  urls.py  views.py
apps/rbac/: forms.py  models.py  views.py
apps/trips/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: admin.py  middleware.py  models.py  pipeline.py  subscription_views.py  views.py
apps/visits/: admin.py  forms.py  models.py  urls.py  views.py
apps/wineries/: admin.py  forms.py  models.py  scraper.py  urls.py  (+1 more)
config/: __init__.py  celery.py  urls.py
docker/: Dockerfile  entrypoint.sh
docs/: CLAUDE_INSTRUCTIONS.md  FEATURE_ROADMAP.md  aws-architecture.md
fixtures/: seed_data.json
mobile/: .gitignore  README.md  pubspec.yaml
requirements/: base.txt  dev.txt  prod.txt
scripts/: deploy.sh  railway_start.sh  seed_supabase.sh
templates/: base.html  landing.html
tests/: conftest.py
(+253 files in other folders)
